--- a/effect-change.html
+++ b/effect-change.html
@@ -44,8 +44,9 @@
 						<li><a href="wilful-ignorance.html">Wilful ignorance</a></li>
 						<li><a href="negligence.html">Failure to act</a></li>
 						<li><a href="government-policy.html">Government policy</a></li>
+						<li><a href="capitalism.html">Capitalism</a></li>
 						<li><a href="effect-change.html">Effecting change</a></li>
-						<li><a href="references.html">References</a></li>
+						<li><a href="references.php">References</a></li>
 				</ul>
 			</nav>
 
