--- a/elements.html
+++ b/elements.html
@@ -38,9 +38,15 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="moving-on.html">Moving on</a></li>
+						<li><a href="accountability.html">Accountability</a></li>
+						<li><a href="wilful-ignorance.html">Wilful ignorance</a></li>
+						<li><a href="negligence.html">Failure to act</a></li>
+						<li><a href="government-policy.html">Government policy</a></li>
+						<li><a href="capitalism.html">Capitalism</a></li>
+						<li><a href="effect-change.html">Effecting change</a></li>
+						<li><a href="references.php">References</a></li>
 				</ul>
 			</nav>
 
