--- a/elements.html
+++ b/elements.html
@@ -457,6 +457,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 		<!-- Footer -->
 			<footer id="footer">
+				<span class="logo"><a target="_blank" href="https://boiledfrog.ca"><img src="images/logo.png" /></a></span>
 				<span class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></span>
 				<div class="container">
 					<ul class="icons">
