--- a/wilful-ignorance.html
+++ b/wilful-ignorance.html
@@ -84,6 +84,7 @@
 
 		<!-- Footer -->
 			<footer id="footer">
+				<span class="logo"><a target="_blank" href="https://boiledfrog.ca"><img src="images/logo.png" /></a></span>
 				<span class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></span>
 				<div class="container">
 					<ul class="icons">
