--- a/elements.html
+++ b/elements.html
@@ -456,20 +456,22 @@ print 'It took ' + i + ' iterations to sort the deck.';
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer">
+		<footer id="footer">
 				<span class="logo"><a target="_blank" href="https://boiledfrog.ca"><img src="images/logo.png" /></a></span>
 				<span class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></span>
 				<div class="container">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<ul style="margin-bottom:10px;" class="icons">
+						<li><a href="http://boiledfrog.ca" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="http://boiledfrog.ca" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="http://boiledfrog.ca" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="mailto:admin@boiledfrog.ca?Subject=Boiled Frog" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
+			
 				<div class="copyright">
 					Boiled Frog &copy;2019 All rights reserved
 				</div>
+				
 			</footer>
 
 		<!-- Scripts -->
