--- a/accountability.html
+++ b/accountability.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
- 		<title>Boiled Frog</title>
+ 		<title>Boiled Frog - Climate Change Accountability</title>
 		<meta name="description" content="Climate Change Criminality">
 		<meta name="author" content="Ian James">
 		<meta charset="utf-8" />
@@ -30,8 +30,7 @@
 
 		<!-- Header -->
 		<header id="header">
-				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a>&nbsp;&nbsp;&nbsp;
-					<span class="tagline">“global warming is not a future threat - it's a present reality” ― Bill McKibben</span></div>
+				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -70,7 +69,9 @@
 								<h2>It is wrong and immoral to seek to escape the consequences of one's acts.</h2>
 							</header>
 							<br /><br />
-							<p>Coming soon.</p>
+							<p style="font-style: italic; color:black;">"'Some say I should be in school. But why should any young person be made to study for a future when no-one is doing enough to save that future? What is the point of learning facts when the most important facts given by the finest scientists are <b>ignored</b> by politicians."<br />
+								<span style="font-style: normal;">Greta Thunberg</span></p>
+							<div style="float:left; margin-right:20px;"><iframe width="560" height="315" src="https://www.youtube.com/embed/VFkQSGyeCWg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui vel est tempor faucibus. Aliquam erat volutpat. Quisque vel est vitae nibh laoreet auctor. In nec libero dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros rutrum metus, vel lacinia magna odio non nunc. Praesent semper felis eu rhoncus aliquam. Donec at quam ac libero vestibulum pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas commodo erat eget molestie sollicitudin. Donec imperdiet, ex sed blandit dictum, ipsum metus ultrices arcu, vitae euismod nisl sapien vitae tortor.</p>
 
 							<p>Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem justo, finibus sed dui eu, accumsan facilisis dolor. Fusce quis dui eget odio iaculis aliquam vel sed velit. Nulla pellentesque posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac condimentum orci, ac varius ante. Nunc blandit quam sit amet sollicitudin sodales.</p>
@@ -91,19 +92,17 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-				<span class="logo"><a target="_blank" href="https://boiledfrog.ca"><img src="images/logo.png" /></a></span>
-				<span class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></span>
+				<div class="logo"><a target="_blank" href="https://boiledfrog.ca"><img src="images/logo.png" /></a></div>
+				<div class="copy">Boiled Frog &copy;2019 All rights reserved<div class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></div></div>
 				<div class="container">
+					
 					<ul style="margin-bottom:10px;" class="icons">
-						<li><a href="http://boiledfrog.ca" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="http://boiledfrog.ca" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="http://boiledfrog.ca" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://boiledfrog.ca" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://boiledfrog.ca" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://boiledfrog.ca" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:admin@boiledfrog.ca?Subject=Boiled Frog" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
-				</div>
-			
-				<div class="copyright">
-					Boiled Frog &copy;2019 All rights reserved
+
 				</div>
 				
 			</footer>
