--- a/effect-change.html
+++ b/effect-change.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
- 		<title>Boiled Frog</title>
+ 		<title>Boiled Frog - Climate Change Effecting Change</title>
 		<meta name="description" content="Climate Change Criminality">
 		<meta name="author" content="Ian James">
 		<meta charset="utf-8" />
@@ -30,8 +30,7 @@
 
 		<!-- Header -->
 		<header id="header">
-				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a>&nbsp;&nbsp;&nbsp;
-					<span class="tagline">“global warming is not a future threat - it's a present reality” ― Bill McKibben</span></div>
+				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -72,6 +71,26 @@
 							</header>
 							<br /><br />
 							<p>Coming soon.</p>
+											  <!-- Load Facebook SDK for JavaScript -->
+							<div id="fb-root"></div>
+							<script>(function(d, s, id) {
+								var js, fjs = d.getElementsByTagName(s)[0];
+								if (d.getElementById(id)) return;
+								js = d.createElement(s); js.id = id;
+								js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
+								fjs.parentNode.insertBefore(js, fjs);
+							}(document, 'script', 'facebook-jssdk'));</script>
+			
+							<!-- Your embedded video player code -->
+							<div style="float:left; margin-right:20px; border:2px solid #aaaaaa;" class="fb-video" data-href="https://www.facebook.com/bbcnews/videos/367615297354109/" data-autoplay="true" data-width="300" data-show-text="false">
+								<div class="fb-xfbml-parse-ignore">
+								<blockquote cite="https://www.facebook.com/facebook/videos/10153231379946729/">
+									<a href="https://www.facebook.com/facebook/videos/10153231379946729/">How to Share With Just Friends</a>
+									<p>How to share with just friends.</p>
+									Posted by <a href="https://www.facebook.com/facebook/">Facebook</a> on Friday, December 5, 2014
+								</blockquote>
+								</div>
+				  </div>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui vel est tempor faucibus. Aliquam erat volutpat. Quisque vel est vitae nibh laoreet auctor. In nec libero dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros rutrum metus, vel lacinia magna odio non nunc. Praesent semper felis eu rhoncus aliquam. Donec at quam ac libero vestibulum pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas commodo erat eget molestie sollicitudin. Donec imperdiet, ex sed blandit dictum, ipsum metus ultrices arcu, vitae euismod nisl sapien vitae tortor.</p>
 
 							<p>Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem justo, finibus sed dui eu, accumsan facilisis dolor. Fusce quis dui eget odio iaculis aliquam vel sed velit. Nulla pellentesque posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac condimentum orci, ac varius ante. Nunc blandit quam sit amet sollicitudin sodales.</p>
@@ -80,23 +99,24 @@
 						</div>
 					</div>
 				</div>
+
 			</section>
+
+
 
 		<!-- Footer -->
 		<footer id="footer">
-				<span class="logo"><a target="_blank" href="https://boiledfrog.ca"><img src="images/logo.png" /></a></span>
-				<span class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></span>
+				<div class="logo"><a target="_blank" href="https://boiledfrog.ca"><img src="images/logo.png" /></a></div>
+				<div class="copy">Boiled Frog &copy;2019 All rights reserved<div class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></div></div>
 				<div class="container">
+					
 					<ul style="margin-bottom:10px;" class="icons">
-						<li><a href="http://boiledfrog.ca" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="http://boiledfrog.ca" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="http://boiledfrog.ca" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://boiledfrog.ca" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://boiledfrog.ca" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://boiledfrog.ca" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:admin@boiledfrog.ca?Subject=Boiled Frog" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
-				</div>
-			
-				<div class="copyright">
-					Boiled Frog &copy;2019 All rights reserved
+
 				</div>
 				
 			</footer>
