--- a/generic.html
+++ b/generic.html
@@ -30,8 +30,7 @@
 
 		<!-- Header -->
 		<header id="header">
-				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a>&nbsp;&nbsp;&nbsp;
-					<span class="tagline">“global warming is not a future threat - it's a present reality” ― Bill McKibben</span></div>
+				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -81,19 +80,17 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-				<span class="logo"><a target="_blank" href="https://boiledfrog.ca"><img src="images/logo.png" /></a></span>
-				<span class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></span>
+				<div class="logo"><a target="_blank" href="https://boiledfrog.ca"><img src="images/logo.png" /></a></div>
+				<div class="copy">Boiled Frog &copy;2019 All rights reserved<div class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></div></div>
 				<div class="container">
+					
 					<ul style="margin-bottom:10px;" class="icons">
-						<li><a href="http://boiledfrog.ca" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="http://boiledfrog.ca" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="http://boiledfrog.ca" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://boiledfrog.ca" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://boiledfrog.ca" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://boiledfrog.ca" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:admin@boiledfrog.ca?Subject=Boiled Frog" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
-				</div>
-			
-				<div class="copyright">
-					Boiled Frog &copy;2019 All rights reserved
+
 				</div>
 				
 			</footer>
