--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<img src="images/banner-5.jpg"  alt="Wild Fires" />
 					<div class="inner">
 						<header>
-							<p>Is Climate Change Denial Criminal?</p>
+							<p>Is Climate Change Denial a Crime?</p>
 							<h2>Wild Fires</h2>
 						</header>
 					</div>
