--- a/navigation.html
+++ b/navigation.html
@@ -9,6 +9,7 @@
 						<li><a href="government-policy.php">Government policy</a></li>
 						<li><a href="capitalism.php">Capitalism</a></li>
 						<li><a href="effect-change.php">Effecting change</a></li>
+						<li><a href="visualizations.php">Visualizations</a></li>
 						<li><a href="references.php">References</a></li>
 				</ul>
 			</nav>
