--- a/navigation.html
+++ b/navigation.html
@@ -5,7 +5,7 @@
 						<li><a href="perspective.php">In Perspective</a></li>
 						<li><a href="accountability.php">Accountability</a></li>
 						<li><a href="wilful-ignorance.php">Wilful ignorance</a></li>
-						<li><a href="negligence.php">Failure to act</a></li>
+						<li><a href="legal-remedies.php">Legal remedies</a></li>
 						<li><a href="government-policy.php">Government policy</a></li>
 						<li><a href="effect-change.php">Effecting change</a></li>
 						<li><a href="visualizations1.php">Visualizations</a></li>
