--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 		<!-- Header -->
 		<header id="header">
-			<div class="logo"><a href="https://boiledfrog.ca">Boiled Frog</a></div>
+			<div class="logo"><a href="https://boiledfrog.ca">Boiled Frog - Climate Change Resources</a></div>
 			<a href="#menu">Menu</a>
 		</header>
