--- a/footer.html
+++ b/footer.html
@@ -4,15 +4,10 @@
 				<div class="copy">Boiled Frog &copy;2019 All rights reserved<div class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></div></div>
 				<div class="container">
 					
-					<ul style="margin-bottom:10px;" class="icons">
-						<li><a href="https://boiledfrog.ca" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://boiledfrog.ca" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://boiledfrog.ca" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="mailto:admin@boiledfrog.ca?Subject=Boiled Frog" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
+						<div><iframe width="600" height="300" src="https://climateclock.net/?rel=0" frameborder="0" scrolling="no"></iframe></div>
 
 				</div>
-				
+				<br /><br /><br /><br /><br />
 			</footer>
 
 		<!-- Scripts -->
