--- a/navigation.html
+++ b/navigation.html
@@ -11,6 +11,7 @@
 						<li><a href="visualizations1.php">Visualizations</a></li>
 						<li><a href="solutions.php">Solutions</a></li>
 						<li><a href="news-feed.php">News Feeds</a></li>
+						<li><a href="http://boiledfrog.ca/forum/">Forum</a></li>
 						<li><a href="references.php">References</a></li>
 				</ul>
 			</nav>
